syntax = "proto3";

package grpc_package;

option go_package = "internal/grpc_package/;grpc_package";

// Сервис данных о погоде
service WeatherService {
    rpc GetWeatherUpdates(Request) returns (stream Response);
}

// Сообщение для запроса погоды
message Request {
    string city_name = 1;    // Название города
}

// Сообщение для ответа
message Response {
    string city_name = 1;    // Название города
    float temperature = 2;   // Температура воздуха в градусах цельсия
    float precipitation = 3; // Осадки в процентах
    float wind_speed = 4;    // Скорость ветра м/с
    string condition = 5;    // Состояние (ясно, облачно или дождь)
}